--- a/.github/workflows/php-lint.yml
+++ b/.github/workflows/php-lint.yml
@@ -1,53 +1,85 @@
-name: PHP Linting check
+name: PHP Linting
+
 on:
   push:
   pull_request:
-  # Allow manually triggering the workflow.
   workflow_dispatch:
 
-# Cancel all previous workflow runs for the same branch that have not yet completed.
 concurrency:
   group: ${{ github.workflow }}-${{ github.event.pull_request.number || github.ref }}
   cancel-in-progress: true
 
 jobs:
-  phpcs:
-    name: PHP Linting checks
+  # Test the package itself using composer scripts
+  lint-package:
+    name: Lint Package
     runs-on: ubuntu-latest
     steps:
       - name: Checkout code
         uses: actions/checkout@v4
 
       - name: Setup PHP
-        uses: "shivammathur/setup-php@v2"
+        uses: shivammathur/setup-php@v2
         with:
-          php-version: 'latest'
-          ini-values: 'memory_limit=1G'
+          php-version: '8.2'
+          ini-values: memory_limit=1G
           coverage: none
           tools: cs2pr
 
-      - name: Composer Validate
-        id: composer_validate
-        run: composer validate
+      - name: Validate composer.json
+        run: composer validate --strict
 
-      - name: Install Composer dependencies
-        uses: "ramsey/composer-install@v3"
+      - name: Install dependencies
+        uses: ramsey/composer-install@v3
         with:
-          # Bust the cache at least once a month - output format: YYYY-MM.
           custom-cache-suffix: $(date -u "+%Y-%m")
 
-      - name: PHP Syntax
-        id: php_syntax
+      - name: PHP Syntax Check
         run: composer run lint:php
 
-      - name: Run PHPCS checks
+      - name: PHPCS Check
         id: phpcs
-        run: composer run lint:phpcs
+        run: |
+          composer run lint:phpcs -- --report=checkstyle --report-file=phpcs-report.xml || PHPCS_EXIT=$?
+          composer run lint:phpcs || true
+          exit ${PHPCS_EXIT:-0}
 
       - name: Show PHPCS results in PR
-        if: ${{ always() && steps.phpcs.outcome == 'failure' }}
-        run: cs2pr ./phpcs-report.xml
+        if: always() && steps.phpcs.outcome == 'failure'
+        run: cs2pr ./phpcs-report.xml || true
 
-      - name: PHPStan checks
-        id: phpstan
+      - name: PHPStan Check
         run: composer run lint:phpstan
+
+  # Validate action.yml syntax
+  validate-action:
+    name: Validate Action
+    runs-on: ubuntu-latest
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v4
+
+      - name: Validate action.yml
+        run: |
+          # Check action.yml exists and is valid YAML
+          if [ ! -f action.yml ]; then
+            echo "action.yml not found!"
+            exit 1
+          fi
+
+          # Basic YAML validation using Python
+          python3 -c "import yaml; yaml.safe_load(open('action.yml'))"
+          echo "action.yml is valid YAML"
+
+          # Check required fields
+          if ! grep -q "^name:" action.yml; then
+            echo "action.yml missing 'name' field"
+            exit 1
+          fi
+
+          if ! grep -q "^runs:" action.yml; then
+            echo "action.yml missing 'runs' field"
+            exit 1
+          fi
+
+          echo "action.yml validation passed"
