Add token input for private repo access

--- a/action.yml
+++ b/action.yml
@@ -7,6 +7,10 @@ branding:
   color: 'blue'
 
 inputs:
+  token:
+    description: 'GitHub token with access to checkout this action repo (required if repo is private)'
+    required: false
+    default: ${{ github.token }}
   php-version:
     description: 'PHP version to use'
     required: false
@@ -55,6 +59,7 @@ runs:
       uses: actions/checkout@v4
       with:
         repository: tomjn/wp-php-linting-action
+        token: ${{ inputs.token }}
         path: .wp-linting-tools
         ref: main
 
