--- a/composer.json
+++ b/composer.json
@@ -37,6 +37,9 @@
             "ergebnis/composer-normalize": true,
             "ion-bazan/composer-diff": true,
             "phpstan/extension-installer": true
+        },
+        "platform": {
+            "php": "8.2"
         }
     },
     "extra": {
