Fix CI workflow startup_failure by removing shell expansion in YAML
Remove custom-cache-suffix using $(date) shell syntax which isn't
evaluated in GitHub Actions YAML values, causing workflow parse failure.
Add explicit branch filters for push and pull_request triggers.

--- a/.github/workflows/php-lint.yml
+++ b/.github/workflows/php-lint.yml
@@ -2,7 +2,9 @@ name: PHP Linting
 
 on:
   push:
+    branches: [main]
   pull_request:
+    branches: [main]
   workflow_dispatch:
 
 concurrency:
@@ -31,8 +33,6 @@ jobs:
 
       - name: Install dependencies
         uses: ramsey/composer-install@v3
-        with:
-          custom-cache-suffix: $(date -u "+%Y-%m")
 
       - name: PHP Syntax Check
         run: composer run lint:php
